# artifacts/openapi/wecms-api-v1.json
@@ -86,12 +86,7 @@
               }
             }
           }
-        },
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ]
+        }
       }
     },
     "/api/v1/auth/me": {
